[tool.poetry]
name = "zotero2md"
version = "0.2.0"
description = "Export Zotero annotations and notes to Markdown files."
readme = "README.md"
authors = ["ealizadeh <hello@ealizadeh.com>"]
homepage = "https://github.com/e-alizadeh/Zotero2MD"
repository = "https://github.com/e-alizadeh/Zotero2MD"
documentation = "https://github.com/e-alizadeh/Zotero2MD"
keywords = [
    "Zotero",
    "Markdown",
    "Note-Taking",
]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha"
]


[tool.semantic_release]
version_variable = [
    "zotero2md/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "release"
upload_to_repository = true
upload_to_release = true
build_command = "pip install poetry && poetry build"


[tool.poetry.dependencies]
python = "^3.8"
Pyzotero = "^1.4.26"
SnakeMD = "^0.9.3"
markdownify = "^0.10.1"


[tool.poetry.dev-dependencies]
ipython = "^7.32.0"
pre-commit = "^2.16.0"
python-dotenv = "^0.19.2"
ipdb = "^0.13.9"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/e-alizadeh/Zotero2MD/issues"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
